                        3) Top250 support
                        4) outline support
                        5) rating precision
                        6) not to overwrite XBMC NFO data
  - Fixed defect #511 Sending cookies to subdomains
  - Fixed defect #514 Episode plots not loaded for files with episode titles.
  - Fixed defect #519 R721 broke tv show nfo
  - Enhancement  #532 Update for FilmDeltaSEPlugin
                        1) Improved scan-function to get more filmdelta matches
                        2) If only imdbId is found in nfo this is used to get movie title and search filmdelta with that title
                        3) Code refactored for testability
                        4) Added properties to moviejukebox.properties
  - Enhancement  #536 Moviejukebox Listing plugin. Creates a CSV file with information about the movies in the jukebox.


MovieJukebox 1.0.15 beta
------------------------
  - Enhancement   #72 Support for multi-episode files and folders
  - Enhancement   #90 Skins now have the ability to wrap around from the last index page to the first and vice versa 
  - Enhancement  #225 Improved sorting of movies (by IMdB rating and by year)
  - Enhancement  #250 So how do we customize the categories?
  - Enhancement  #254 Use XBMC tvshow nfo layout to override scraper info
  - Enhancement  #281 Support DVD order from TheTVDB.com
  - Enhancement  #331 FilmUp.it scraper (Italian Plug-In)
  - Enhancement  #343 Allowing prebuf to be set
  - Fixed defect #346 Errors on multiple part movies - empty details html file
  - Enhancement  #348 Enhanced BD-50 Disk RIP Scanner
  - Fixed defect #352 Fanart not being resized
  - Fixed defect #353 Some of the html files are not getting copied from the temp dir to the jukebox dir
  - Fixed defect #354 Jukebox clean-up doesn't handle files with no extension cleanly
  - Fixed defect #356 ForceFanartOverwrite setting doesn't work
  - Fixed defect #359 Allow either Series url or Season url in NFO for TheTVDB